# ros2_ethercat_example_gpio

./: CMakeLists.txt  README.md  package.xml
config/: beckhoff_fb1111.yaml  ros2_controllers.yaml
description/: robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
doc/: command.txt
launch/: init.launch.py
res/: Beckhoff FB1XXX.xml
scripts/: blink.py  build.sh  readwrite.py
